# tcm-piv

./: .gitignore  README.md  plot_flow_rate.py  plot_profile.py  pyproject.toml  simple_run.py
examples/: image_pair.py
examples/image_pair/input/: config_image_pair.toml  config_image_pair.toml_260110_004618.bak  config_image_pair_tijn.toml  config_image_pair_tijn.toml_260117_144316.bak  config_image_pair_tommie.toml  test_P-001_20260107_173921.cihx  test_P-001_20260107_173921002610.tif  test_P-001_20260107_173921_260107_174151_metadata.json
examples/two_frames/: test_P-001_20260107_173921002609.tif
piv/: piv.bak
piv/archive/: PIV_solver_Cough_abe.py  calibration.bak  piv_demo.ipynb  piv_fun.py  piv_functions.bak  piv_githubshitbackup.bak  test.py  test2.py  test3.py  test_varwins.py
piv/calibration/: 250624_calibration_PIV_500micron.npz  250624_calibration_PIV_500micron.tif  calibration_PIV_500micron_2025_07_23_C001H001S0001.npz  calibration_PIV_500micron_2025_07_23_C001H001S0001.tif
piv/piv_functions/: Gupta_comparison.py  __init__.py  plotting.py  postprocessing.py  preprocessing.py  utils.py
scripts/: piv.py  piv_new.py
source/tcm_piv/: __init__.py  checkpoints.py  config.toml  correlation.py  default_config.toml  displacement.py  init_config.py  io.py  main.py  postprocessing.py  preprocessing.py  run.py  utils.py  visualisation.py
src/tcm_piv/: __init__.py  config.ini  correlation.py  default_config.toml  displacement.py  empty_config.ini  init_config.py  io.py  main.py  plotting.py  postprocessing.py  preprocessing.py
(+21 files in other folders)
