[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcm-piv"
version = "0.1.0"
description = "Particle image velocimetry toolbox for the Twente Cough Machine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"numpy",
	"scipy",
	"opencv-python",
	"matplotlib",
	"scikit-image",
	"tqdm",
	"natsort",
	"tcm-utils"
]

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.package-data]
tcm_piv = ["*.toml"]